8274860: gcc 10.2.1 produces an uninitialized warning in sharedRuntimeTrig.cpp