src/hotspot/share/runtime/sharedRuntimeTrig.cpp
@@ -175,7 +175,7 @@ twon24  = 5.96046447753906250000e-08; /* 0x3E700000, 0x00000000 */
 
 static int __kernel_rem_pio2(double *x, double *y, int e0, int nx, int prec, const int *ipio2) {
   int jz,jx,jv,jp,jk,carry,n,iq[20],i,j,k,m,q0,ih;
-  double z,fw,f[20],fq[20],q[20];
+  double z,fw,f[20],fq[20] = {0.0},q[20];
 
   /* initialize jk*/
   jk = init_jk[prec];
